start changes of accomodation section

--- a/index.html
+++ b/index.html
@@ -44,155 +44,43 @@
           </div>
         </div>
 
-        <!----- Filters section ----->
-        <section class="sectionFiltres">
-          <h4>Filtres</h4>
-          <div>
-            <div class="filtres">
-              <div class="iconFiltres">
-                <i class="fas fa-money-bill-wave-alt fa-sm"></i>
-              </div>
-              <p>Low cost</p>
+      <!----- Filters section ----->
+      <section class="sectionFiltres">
+        <h4>Filtres</h4>
+        <div>
+          <div class="filtres">
+            <div class="iconFiltres">
+              <i class="fas fa-money-bill-wave-alt fa-sm"></i>
             </div>
-            <div class="filtres">
-              <div class="iconFiltres"><i class="fas fa-child fa-sm"></i></div>
-              <p>Family-friendly</p>
-            </div>
-            <div class="filtres">
-              <div class="iconFiltres"><i class="fas fa-heart fa-sm"></i></div>
-              <p>Romantic</p>
-            </div>
-            <div class="filtres">
-              <div class="iconFiltres"><i class="fas fa-dog fa-sm"></i></div>
-              <p>Pets allowed</p>
-            </div>
+            <p>Low cost</p>
           </div>
+          <div class="filtres">
+            <div class="iconFiltres"><i class="fas fa-child fa-sm"></i></div>
+            <p>Family-friendly</p>
+          </div>
+          <div class="filtres">
+            <div class="iconFiltres"><i class="fas fa-heart fa-sm"></i></div>
+            <p>Romantic</p>
+          </div>
+          <div class="filtres">
+            <div class="iconFiltres"><i class="fas fa-dog fa-sm"></i></div>
+            <p>Pets allowed</p>
+          </div>
+        </div>
       </section>  
       <div class="parag">
         <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
       </div>
-    </div>  
-    <!----- Accomodation section ----->
-    <section class="center-container">  
-     <div class="left-container">  
-      <div class="title">
-        <h3>Accomodations in Marseille</h3> 
-      </div> 
-        <div class="col">
-            <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-            <h4>Auberge la Cannebeire</h4>
-            <p>Night starting at <strong>25£</strong></p>
-            <span class="star">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-            </span>
-            <span class="empty-star">
-              <i class="fa-solid fa-star "></i>
-            </span>
-        </div>
-        <div class="col">
-          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-            <i class="fa-solid fa-star "></i>
-          </span>
-        </div>
-        <div class="col">
-          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-            <i class="fa-solid fa-star "></i>
-          </span>
-        </div>
-        <div class="col">
-          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-            <i class="fa-solid fa-star "></i>
-         </span>
-        </div>
-        <div class="col">
-          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-            <i class="fa-solid fa-star "></i>
-          </span>
-        </div>
-        <div class="col">
-          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-            <i class="fa-solid fa-star "></i>
-          </span>
-        </div>
-        </div>
-      </div>
-      <div class="col">
-            <img src="img/5.jpg" alt="">
-            <h4>+30 Skin Care Products</h4>
-            <div class="rating">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star-half-o checked"></span>   
-            </div>
-            <p>£50</p>
-        </div>
-        <div class="col">
-          <img src="img/6.jpg" alt="">
-          <h4>+40 Skin Care Products</h4>
-          <div class="rating">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>   
-          </div>
-          <p>£60</p>
-      </div>
-      <div class="small-container">
-        
-      </div> 
+    </div> 
 
-  </section>  
+    <!----- Accomodation section ----->
+    <section id="accomodations" class="backgroundcolor">
+      <h2 class="accomodationSubject">Accomodations in Marseille</h2>
+
+
+
+    
+
 </body>
 </html>
