framework of accomadions

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
     <!----- Accomodation section ----->
     <section id="accomodations" class="backgroundcolor">
       <h2 class="accomodationSubject">Accomodations in Marseille</h2>
+      <div class="mainContentOfAcc">
+        <a href="#" class="contentAcc">
+          <figure>
+            <div class="frameworkAcc">
+              <img
+                class="imageAcc"
+                src="assest/images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                alt=""
+              />
+            </div>
+
 
 
 
