add figcaptions for first img

--- a/index.html
+++ b/index.html
@@ -87,6 +87,32 @@
                 alt=""
               />
             </div>
+            <figcaption class="captionOfAcc">
+              <p>
+                <b>Auberge la Canneberge</b><br/>Night starting at
+                <b>25€</b>
+              </p>
+              <ul>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="false"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
+
 
 
 
