add second img and figure

--- a/index.html
+++ b/index.html
@@ -112,6 +112,41 @@
             </figcaption>
           </figure>
         </a>
+        <a href="#" class="contentAcc">
+          <figure>
+            <div class="frameworkAcc">
+              <img
+                class="imageAcc"
+                src="assest/images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <figcaption class="captionOfAcc">
+              <p>
+                <b>Hotel du Port</b><br/>Night starting at
+                <b>52€</b>
+              </p>
+              <ul>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="false"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
+
 
 
 
