img and figures done

--- a/index.html
+++ b/index.html
@@ -146,13 +146,143 @@
             </figcaption>
           </figure>
         </a>
-
-
-
-
-
-
-    
-
+        <a href="#" class="contentAcc">
+          <figure>
+            <div class="frameworkAcc">
+              <img
+                class="imageAcc"
+                src="assest/images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <figcaption class="captionOfAcc">
+              <p>
+                <b>Les mouettes Hotel</b><br/>Night starting at
+                <b>76€</b>
+              </p>
+              <ul>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="false"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
+        <a href="#" class="contentAcc">
+          <figure>
+            <div class="frameworkAcc">
+              <img
+                class="imageAcc"
+                src="assest/images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <figcaption class="captionOfAcc">
+              <p>
+                <b>Hotel de le mer</b><br/>Night starting at
+                <b>46€</b>
+              </p>
+              <ul>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="false"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
+        <a href="#" class="contentAcc">
+          <figure>
+            <div class="frameworkAcc">
+              <img
+                class="imageAcc"
+                src="assest/images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <figcaption class="captionOfAcc">
+              <p>
+                <b>Auberge Le Panier</b><br/>Night starting at
+                <b>23€</b>
+              </p>
+              <ul>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="false"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
+        <a href="#" class="contentAcc">
+          <figure>
+            <div class="frameworkAcc">
+              <img
+                class="imageAcc"
+                src="assest/images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <figcaption class="captionOfAcc">
+              <p>
+                <b>Hotel Chez Amina</b><br/>Night starting at
+                <b>96€</b>
+              </p>
+              <ul>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="true"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star rating" data-active="false"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
+      </div>
+    </section>
 </body>
 </html>
