css for accomodation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Booki</title>
 </head>
 <body>
-    <div class="header">
+    <section class="header">
       <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -74,8 +74,10 @@
       </div>
     </div> 
 
-    <!----- Accomodation section ----->
-    <section id="accomodations" class="backgroundcolor">
+  <!----- Accomodation section ----->
+  <section class="mainPopularAcc"></section>
+
+    <div id="accomodations" class="backgroundGrid">
       <h2 class="accomodationSubject">Accomodations in Marseille</h2>
       <div class="mainContentOfAcc">
         <a href="#" class="contentAcc">
@@ -283,6 +285,7 @@
           </figure>
         </a>
       </div>
-    </section>
+    </div>
+  </section>  
 </body>
 </html>
