accomodation done but need some changes later

--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@
     </div> 
 
   <!----- Accomodation section ----->
-  <section class="mainPopularAcc"></section>
-
+  <section class="mainPopularAcc marginSides">
     <div id="accomodations" class="backgroundGrid">
       <h2 class="accomodationSubject">Accomodations in Marseille</h2>
       <div class="mainContentOfAcc">
-        <a href="#" class="contentAcc">
+        <a href="#" class="contentAcc backgroundBlank">
           <figure>
             <div class="frameworkAcc">
               <img
@@ -96,7 +95,7 @@
               </p>
               <ul>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fa-solid fa-star"></i>
                 </li>
                 <li>
                   <i class="fas fa-star rating" data-active="true"></i>
@@ -114,7 +113,7 @@
             </figcaption>
           </figure>
         </a>
-        <a href="#" class="contentAcc">
+        <a href="#" class="contentAcc backgroundBlank">
           <figure>
             <div class="frameworkAcc">
               <img
@@ -148,7 +147,7 @@
             </figcaption>
           </figure>
         </a>
-        <a href="#" class="contentAcc">
+        <a href="#" class="contentAcc backgroundBlank">
           <figure>
             <div class="frameworkAcc">
               <img
@@ -182,7 +181,7 @@
             </figcaption>
           </figure>
         </a>
-        <a href="#" class="contentAcc">
+        <a href="#" class="contentAcc backgroundBlank">
           <figure>
             <div class="frameworkAcc">
               <img
@@ -216,7 +215,7 @@
             </figcaption>
           </figure>
         </a>
-        <a href="#" class="contentAcc">
+        <a href="#" class="contentAcc backgroundBlank">
           <figure>
             <div class="frameworkAcc">
               <img
@@ -250,7 +249,7 @@
             </figcaption>
           </figure>
         </a>
-        <a href="#" class="contentAcc">
+        <a href="#" class="contentAcc backgroundBlank">
           <figure>
             <div class="frameworkAcc">
               <img
@@ -285,6 +284,7 @@
           </figure>
         </a>
       </div>
+      <a href="#"><p class="accomodationSubject">Show more</p></a>
     </div>
   </section>  
 </body>
