--- a/index.html
+++ b/index.html
@@ -285,7 +285,10 @@
         </a>
       </div>
       <a href="#"><p class="accomodationSubject">Show more</p></a>
-    </div>
-  </section>  
+    </div> 
+  </section>   
+
+  <!-- POPULAR ACC SECTION -->
+  
 </body>
 </html>
