add title and fix position

--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
       </div>
     </div> 
 
-  <!----- Accomodation section ----->
-  <section class="mainPopularAcc marginSides">
-    <div id="accomodations" class="backgroundGrid">
-      <h2 class="accomodationSubject">Accomodations in Marseille</h2>
+  <!----- Accomodation and Popular ----->
+  <div class="mainPopularAcc marginSides">
+    <!---- Accomodation section ----->
+    <section id="accomodations" class="backgroundGrid">
+      <h2 class="accomodationTitle">Accomodations in Marseille</h2>
       <div class="mainContentOfAcc">
         <a href="#" class="contentAcc backgroundBlank">
           <figure>
@@ -285,10 +286,15 @@
         </a>
       </div>
       <a href="#"><p class="accomodationSubject">Show more</p></a>
-    </div> 
-  </section>   
+    </section>   
 
-  <!-- POPULAR ACC SECTION -->
-  
+    <!-- POPULAR ACC SECTION -->
+    <section id="popular" class="backgroundGrid">
+      <div class="popularTitle">
+        <h2>Most Papular</h2>
+        <i class="fa-sharp fa-solid fa-star"></i></i>
+      </div>
+    </section>  
+  </div>
 </body>
 </html>
