add first figure

--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
         <h2>Most Papular</h2>
         <i class="fa-sharp fa-solid fa-star"></i></i>
       </div>
+      <div class="mainContentPopular">
+        <a href="#" class="contentPopular backgroundBlank">
+          <figure>
+            <div class="frameworkPopular">
+              <img
+                class="imgPopular"
+                src="assest/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt=""
+              />
+            </div>
     </section>  
   </div>
 </body>
