add some column to popular

--- a/index.html
+++ b/index.html
@@ -13,37 +13,35 @@
     <title>Booki</title>
 </head>
 <body>
-    <section class="header">
-      <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <img src="assest/images/logo/Booki.png" width="100px" alt="LOGO">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="">Accomodations</a></li>
-                    <li><a href="">Activities</a></li>
-                </ul>
-            </nav>
+  <section class="header">
+      <div class="navbar">
+        <div>
+          <img src="assest/images/logo/Booki.png" width="100px" alt="LOGO">
         </div>
-        <div class class="row">
-          <div>
-            <h3>Find a place for your dream vacation</h3> 
-            <p>Downtown or in nature</p>  
-          </div> 
+        <nav>
+          <ul>
+            <li><a href="">Accomodations</a></li>
+            <li><a href="">Activities</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class class="row">
+        <div>
+          <h3>Find a place for your dream vacation</h3> 
+          <p>Downtown or in nature</p>  
+        </div> 
+      </div>
+      <div class="topnav">
+        <label class="label-container">
+        <i class="fa-solid fa-location-dot"></i>
+        </label>
+        <div class="search-container">
+          <form>
+           <input type="text" placeholder=" Marseille, France">
+           <button type="submit" >Search</button>
+          </form>
         </div>
-        <div class="topnav">
-          <label class="label-container">
-            <i class="fa-solid fa-location-dot"></i>
-          </label>
-          <div class="search-container">
-            <form>
-              <input type="text" placeholder=" Marseille, France">
-              <button type="submit" >Search</button>
-            </form>
-          </div>
-        </div>
-
+      </div>
       <!----- Filters section ----->
       <section class="sectionFiltres">
         <h4>Filtres</h4>
@@ -72,7 +70,7 @@
         <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
       </div>
-    </div> 
+  </section>  
 
   <!----- Accomodation and Popular ----->
   <div class="mainPopularAcc marginSides">
@@ -91,24 +89,24 @@
             </div>
             <figcaption class="captionOfAcc">
               <p>
-                <b>Auberge la Canneberge</b><br/>Night starting at
+                <b>Auberge la Canneberg</b><br/>Night starting at
                 <b>25€</b>
               </p>
               <ul>
                 <li>
-                  <i class="fa-solid fa-star"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="false"></i>
+                  <i class="fas fa-star checked"></i>
                 </li>
               </ul>
             </figcaption>
@@ -130,19 +128,19 @@
               </p>
               <ul>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="false"></i>
+                  <i class="fas fa-star"></i>
                 </li>
               </ul>
             </figcaption>
@@ -164,19 +162,19 @@
               </p>
               <ul>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="false"></i>
+                  <i class="fas fa-star checked"></i>
                 </li>
               </ul>
             </figcaption>
@@ -198,19 +196,19 @@
               </p>
               <ul>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star checked"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="false"></i>
+                  <i class="fas fa-star checked"></i>
                 </li>
               </ul>
             </figcaption>
@@ -232,19 +230,19 @@
               </p>
               <ul>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="false"></i>
+                  <i class="fas fa-star checked"></i>
                 </li>
               </ul>
             </figcaption>
@@ -266,19 +264,19 @@
               </p>
               <ul>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="true"></i>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <i class="fas fa-star rating" data-active="false"></i>
+                  <i class="fas fa-star"></i>
                 </li>
               </ul>
             </figcaption>
@@ -303,7 +301,95 @@
                 src="assest/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                 alt=""
               />
-            </div>
+              <figcaption class="captionPopular">
+                <p>
+                  Morning  Sun Hotel<br/>night starting at 128€
+                </p>
+                <ul>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                </ul>
+              </figcaption>
+          </figure>
+        </a>
+        <a href="#" class="contentPopular backgroundBlank">
+          <figure>
+            <div class="frameworkPopular">
+              <img
+                class="imgPopular"
+                src="assest/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt=""
+              />
+              <figcaption class="captionPopular">
+                <p>
+                  Morning  Sun Hotel<br/>night starting at 128€
+                </p>
+                <ul>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                </ul>
+              </figcaption>
+          </figure>
+        </a>
+        <a href="#" class="contentPopular backgroundBlank">
+          <figure>
+            <div class="frameworkPopular">
+              <img
+                class="imgPopular"
+                src="assest/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt=""
+              />
+              <figcaption class="captionPopular">
+                <p>
+                  Morning  Sun Hotel<br/>night starting at 128€
+                </p>
+                <ul>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                  <li>
+                    <i class="fas fa-star rating" data-active="true"></i>
+                  </li>
+                </ul>
+              </figcaption>
+          </figure>
+        </a>
+      </div>
     </section>  
   </div>
 </body>
