css and html accomodation section done

--- a/index.html
+++ b/index.html
@@ -303,23 +303,23 @@
               />
               <figcaption class="captionPopular">
                 <p>
-                  Morning  Sun Hotel<br/>night starting at 128€
+                  <b>Morning  Sun Hotel</b><p>night starting at <b>128€</b></p>
                 </p>
                 <ul>
                   <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
+                    <i class="fas fa-star"></i>
                   </li>
                   <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
+                    <i class="fas fa-star"></i>
                   </li>
                   <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
+                    <i class="fas fa-star"></i>
                   </li>
                   <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
+                    <i class="fas fa-star"></i>
                   </li>
                   <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
+                    <i class="fas fa-star"></i>
                   </li>
                 </ul>
               </figcaption>
@@ -330,30 +330,30 @@
             <div class="frameworkPopular">
               <img
                 class="imgPopular"
-                src="assest/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                src="assest/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                 alt=""
               />
               <figcaption class="captionPopular">
                 <p>
-                  Morning  Sun Hotel<br/>night starting at 128€
-                </p>
-                <ul>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                </ul>
+                  <b>Au cceur de l'eau Bed and Breakfast</b></p>
+                  <p>night starting at<b> 71€</b></p>
+                  <ul>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star checked"></i>
+                    </li>
+                  </ul>
               </figcaption>
           </figure>
         </a>
@@ -362,30 +362,30 @@
             <div class="frameworkPopular">
               <img
                 class="imgPopular"
-                src="assest/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                src="assest/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                 alt=""
               />
               <figcaption class="captionPopular">
                 <p>
-                  Morning  Sun Hotel<br/>night starting at 128€
-                </p>
-                <ul>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star rating" data-active="true"></i>
-                  </li>
-                </ul>
+                  <b>Tout bleu et Blanc Hotel</b></p>
+                  <p>night starting at<b> 68€</b></p>
+                  <ul>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star checked"></i>
+                    </li>
+                  </ul>
               </figcaption>
           </figure>
         </a>
