--- a/index.html
+++ b/index.html
@@ -283,7 +283,9 @@
           </figure>
         </a>
       </div>
-      <a href="#"><p class="accomodationSubject">Show more</p></a>
+      <div class="more">
+        <a href="#"><p class="accomodationSubject">Show more</p></a>
+      </div>   
     </section>   
 
     <!-- POPULAR ACC SECTION -->
