--- a/index.html
+++ b/index.html
@@ -394,5 +394,23 @@
       </div>
     </section>  
   </div>
+
+   <!-- Activities SECTION -->
+  <section id="activites" class="marginSides">
+    <h2>Activites in Marseille</h2>
+    <div class="mainContentActivites">
+      <div class="premierBlockActivite">
+        <a href="">
+          <div class="blockFigureLarge">
+            <img
+              class="imgActivite"
+              src="assest/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+              alt="Vieux Port de Marseille"
+            />
+          </div>
+          <p class="textActivites">Vieux port</p>
+        </a>
+      </div>
+
 </body>
 </html>
