add first img and p

--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@
             <img
               class="imgActivite"
               src="assest/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-              alt="Vieux Port de Marseille"
+              alt=""
             />
           </div>
-          <p class="textActivites">Vieux port</p>
+          <p class="textActivites">Old Port</p>
         </a>
       </div>
 
