--- a/index.html
+++ b/index.html
@@ -398,17 +398,54 @@
    <!-- Activities SECTION -->
   <section id="activites" class="marginSides">
     <h2>Activites in Marseille</h2>
-    <div class="mainContentActivites">
-      <div class="premierBlockActivite">
+    <div class="mainContentActivity">
+      <div class="firstActivityBlock">
         <a href="">
           <div class="blockFigureLarge">
             <img
-              class="imgActivite"
+              class="imgActivity"
               src="assest/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
               alt=""
             />
           </div>
-          <p class="textActivites">Old Port</p>
+          <p class="textActivity">Old Port</p>
+        </a>
+      </div>
+      <div class="secondActivityBlock">
+        <div class="contentSmall1">
+          <a href="">
+            <div class="blockFigureSmall1">
+              <img
+                class="imgActivity"
+                src="assest/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <p class="textActivity">Pomegues Fort</p>
+          </a>
+        </div>
+        <div class="contentSmall2">
+          <a href="">
+            <div class="blockFigureSmall2">
+              <img
+                class="imgActivity"
+                src="assest/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+              />
+            </div>
+            <p class="textActivity">Frioul Island</p>
+          </a>
+        </div>
+      </div>
+      <div class="thirdActivityBlock">
+        <a href="">
+          <div class="blockFigureLarge">
+            <img
+              class="imgActivity"
+              src="images/activites/desktop/Reservia_Parc_National_Calanques_D.jpg"
+              alt="Parc National des Calanques Marseille"
+            />
+          </div>
+          <p class="textActivity">Parc National des Calanques</p>
         </a>
       </div>
 
