works on activities section

--- a/index.html
+++ b/index.html
@@ -441,13 +441,41 @@
           <div class="blockFigureLarge">
             <img
               class="imgActivity"
-              src="images/activites/desktop/Reservia_Parc_National_Calanques_D.jpg"
-              alt="Parc National des Calanques Marseille"
+              src="assest/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+              alt=""
             />
           </div>
-          <p class="textActivity">Parc National des Calanques</p>
+          <p class="textActivity">Calanques National Park</p>
         </a>
       </div>
+      <div class="fourthActivityBlock">
+        <div class="contentSmall3">
+          <a href="">
+            <div class="blockFigureSmall3">
+              <img
+                class="imageActivity"
+                src="assest/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <p class="textActivity">Notre-Dame-de-la-Garde</p>
+          </a>
+        </div>
+        <div class="contentSmall4">
+          <a href="">
+            <div class="blocFigureSmall4">
+              <img
+                class="imageActivity"
+                src="assest/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                alt=""
+              />
+            </div>
+            <p class="textActivity">Longchamp Park</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
